InternexDev_Sandbox/src/objects/WF_BH__c.object
<CustomObject>
    <fields>
        <fullName>BH_Batch_MCA_credit_amount__c</fullName>
        <label>Batch MCA credit amount(BH07)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BH_Batch_MCA_debit_amount__c</fullName>
        <label>Batch MCA debit amount(BH06)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BH_Batch_MCA_net_amount__c</fullName>
        <label>Batch MCA net amount(BH08)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BH_Batch_count__c</fullName>
        <label>Batch count(BH02)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BH_Batch_credit_amount__c</fullName>
        <label>Batch credit amount(BH04)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BH_Batch_debit_amount__c</fullName>
        <label>Batch debit amount(BH03)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BH_Batch_net_amount__c</fullName>
        <label>Batch net amount(BH05)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BH_Batch_number__c</fullName>
        <label>Batch number(BH01)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Record_ID__c</fullName>
        <defaultValue>&quot;BH&quot;</defaultValue>
        <label>BH Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Batch_MCA_credit_amount__c</fullName>
        <label>Batch MCA credit amount(BT07)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BT_Batch_MCA_debit_amount__c</fullName>
        <label>Batch MCA debit amount(BT06)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BT_Batch_MCA_net_amount__c</fullName>
        <label>Batch MCA net amount(BT08)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BT_Batch_count__c</fullName>
        <label>Batch count(BT02)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BT_Batch_credit_amount__c</fullName>
        <label>Batch credit amount(BT04)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BT_Batch_debit_amount__c</fullName>
        <label>Batch debit amount(BT03)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BT_Batch_net_amount__c</fullName>
        <label>Batch net amount(BT05)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BT_Batch_number__c</fullName>
        <label>Batch number(BT01)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Record_ID__c</fullName>
        <defaultValue>&quot;BT&quot;</defaultValue>
        <label>BT Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LB_Number__c</fullName>
        <formula>MID(PTH_Lockbox_number__c,2,6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LB Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTH_E_Box_biller_ID__c</fullName>
        <label>E-Box biller ID (PTH04)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTH_Lockbox_number__c</fullName>
        <label>Lockbox number (PTH05)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTH_Payment_source__c</fullName>
        <label>Payment source (PTH01)</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PTH_RDFI_R_T__c</fullName>
        <label>RDFI R/T (PTH02)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTH_RDFI_account_number__c</fullName>
        <label>RDFI account number (PTH03)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTH_Record_ID__c</fullName>
        <defaultValue>&quot;PTH&quot;</defaultValue>
        <label>PTH Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_FH__c</fullName>
        <label>Temp FH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_BT_Name__c</fullName>
        <displayFormat>BT-{00000}</displayFormat>
        <label>WF_BT Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>WF_FH__c</fullName>
        <label>WF_FH</label>
        <referenceTo>WF_FH__c</referenceTo>
        <relationshipLabel>WF_BH</relationshipLabel>
        <relationshipName>WF_BH</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WF_PTH_Name__c</fullName>
        <displayFormat>PTH-{00000}</displayFormat>
        <label>WF_PTH Name</label>
        <type>AutoNumber</type>
    </fields>
    <label>WF_BH</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BH-{00000}</displayFormat>
        <label>WF_BH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_BH</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>